# tetr.io-bot

./: .gitignore  README.md  ai.py  config.py  controller.py  grid.py  main.py  pyproject.toml  vision.py
